Added endpoint for adding new files
