# tables-handler.go
@@ -3,8 +3,13 @@ package main
 import (
 	"encoding/json"
 	"fmt"
+	"io"
+	"mime/multipart"
 	"net/http"
+	"os"
 	"path/filepath"
+
+	"github.com/beevik/guid"
 )
 
 // @Summary List available tables
@@ -49,7 +54,7 @@ func handleTablesColumnsQuery(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	columns, err := GetParquetSchema(filepath.Join(config.DataPath, files[0]))
+	columns, err := GetParquetSchemaByPath(filepath.Join(config.DataPath, files[0]))
 	if err != nil {
 		http.Error(w, fmt.Sprintf("Error getting parquet schema: %v", err), http.StatusInternalServerError)
 		return
@@ -83,7 +88,7 @@ func handleTablesSelectColumnsQuery(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	columns, err := GetParquetSchema(filepath.Join(config.DataPath, files[0]))
+	columns, err := GetParquetSchemaByPath(filepath.Join(config.DataPath, files[0]))
 	if err != nil {
 		http.Error(w, fmt.Sprintf("Error getting parquet schema: %v", err), http.StatusInternalServerError)
 		return
@@ -93,4 +98,87 @@ func handleTablesSelectColumnsQuery(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(columns)
+}
+
+// @Summary Upload file to a table with given name
+// @Description Uploads a Parquet file (max 10 MB) to a table with a given name. If the table does not exist, it is created.
+// @Tags tables
+// @Accept mpfd
+// @Produce json
+// @Param name query string true "Table name"
+// @Param file formData file true "File to upload (must have .parquet extension)"
+// @Success 200 {string} string "File uploaded successfully"
+// @Failure 400 {string} string "Invalid table name or file"
+// @Failure 500 {string} string "Internal server error"
+// @Router /tables/upload [post]
+func handleFileUpload(w http.ResponseWriter, r *http.Request) {
+	tableName := r.URL.Query().Get("name")
+	if tableName == "" {
+		http.Error(w, "Missing table name", http.StatusBadRequest)
+		return
+	}
+
+	r.ParseMultipartForm(10 << 20) // 10 MB
+
+	file, fileHeader, err := r.FormFile("file")
+	if err != nil {
+		http.Error(w, "Missing file or invalid file", http.StatusBadRequest)
+		return
+	}
+	defer file.Close()
+
+	if filepath.Ext(fileHeader.Filename) != ".parquet" {
+		http.Error(w, "File must have .parquet extension", http.StatusBadRequest)
+		return
+	}
+
+	tablePath := filepath.Join(config.DataPath, tableName)
+	if err := os.MkdirAll(tablePath, os.ModePerm); err != nil {
+		http.Error(w, "Failed to create directory", http.StatusInternalServerError)
+		return
+	}
+
+	if code, err := validateFileSchema(tableName, file); err != nil {
+		http.Error(w, err.Error(), code)
+		return
+	}
+
+	destPath := filepath.Join(tablePath, guid.NewString()+"_"+fileHeader.Filename)
+	destFile, err := os.Create(destPath)
+	if err != nil {
+		http.Error(w, "Failed to save file", http.StatusInternalServerError)
+		return
+	}
+	defer destFile.Close()
+
+	if _, err := io.Copy(destFile, file); err != nil {
+		http.Error(w, "Failed to save file", http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	fmt.Fprintf(w, "File uploaded successfully to %s", destPath)
+}
+
+func validateFileSchema(tableName string, file multipart.File) (int, error) {
+
+	files, err := findDataFiles(tableName)
+	if err != nil {
+		return http.StatusInternalServerError, fmt.Errorf("failed to retreive existing table files")
+	}
+	if len(files) > 0 {
+		schema, err := GetParquetSchemaByPath(filepath.Join(config.DataPath, files[0]))
+		if err != nil {
+			return http.StatusInternalServerError, fmt.Errorf("failed to get existing table schema")
+		}
+		newFileSchema, err := GetParquetSchemaByMultipartFile(file)
+		if err != nil {
+			return http.StatusInternalServerError, fmt.Errorf("failed to file schema")
+		}
+		if !EqualsParquetSchema(schema, newFileSchema) {
+			return http.StatusBadRequest, fmt.Errorf("file schema differs from existing table schema")
+		}
+	}
+
+	return 0, nil
 }
